# onvif_uplink_applications

./: CMakeLists.txt  Dockerfile  README.md
camera_service_src/: log.cc  server.cc  server.h  session.cc  session.h
cloud_service_src/: client.cc  client.h  log.cc  log.h  vms_connection.cc  vms_connection.h
resource_files/: key.pem  server.pem
